# homeServices

./: README.md  next.config.ts  null  package-lock.json  package.json  pyproject.toml  tsconfig.json  typescript_errors.txt
.documents/: PROJECT_ANALYSIS.md  project_overview.md  project_structure_and_pages.md
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/author/: page.tsx
app/blog/: page.tsx
app/components/: AntiGravityProgressBar.tsx  BrandsWeRepair.tsx  CommonSymptoms.tsx  ContentGrid.tsx  DealCards.tsx  DynamicFormContainer.tsx  ExpertRepair&HomeServices.tsx  FAQ.tsx  GlossaryTerms.tsx  HeroSection.tsx  (+8 more)
components/: Breadcrumbs.tsx  FloatingLabelInput.tsx  Footer.tsx  FooterTwo.tsx  Image&ScheduleCard.tsx  Navbar.tsx  RatingSection.tsx  RepairResources.tsx  SearsHeader.tsx  WhyToChoose.tsx
data/: appliance_issues_full.json  appointments.json  blog-sections.json  brand-appliance-urls.json  brand-names-repairs.json  brands-urls.json  brands_appliances_symptoms_structured.json  h2_content.json  h2_h3_hierarchy.json  json-server.md  repair-services-urls.json  symptomCenter-urls-corrected.json
scripts/: batch-cleanup-scraped.ts  batch-scrape-brands.ts  batch-scrape-repair-services.ts  cleanup-cooktop-data.ts  format-scraped-data.ts  get_h2_content.ts  inspect-h2-structure.ts  replace-scraped-files.ts  scrape-cooktop-page.ts  summarize-brands.ts
utils/: IconImports.ts  ReviewSummary.ts  brand-appliance-parser.ts  brandAppliances.ts  extract-brand-appliance-urls.ts  repair-service-parser.ts  scrape-brand-appliance-pages.ts
(+2503 files in other folders)
